# capstone-project

./: .gitignore  pyproject.toml
dbt_transformation/dbt_stock_transformation/: .gitignore  .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbt_transformation/dbt_stock_transformation/load/: README.md  example_usage.py  live_stock_into_s3.py  requirements.txt
dbt_transformation/dbt_stock_transformation/macros/: generate_schema_name.sql
dbt_transformation/dbt_stock_transformation/models/marts/dim/: dim_company.sql  dim_date.sql  dim_market.sql  dim_price_band.sql
dbt_transformation/dbt_stock_transformation/models/marts/fct/: fact_daily_stock.sql  fact_market_summary.sql  fact_stock_performance.sql  fct_daily_analysis_summary.sql  fct_historical_smart_money_analytics.sql  fct_stock_history.sql  schema.yml  (+3 more)
dbt_transformation/dbt_stock_transformation/models/staging/: schema_stg_company.yml  schema_stg_liveShare.yml  sources.yml  stg_broker_holding.sql  stg_broker_holding.yml  stg_company.sql  stg_liveShare.sql
injestion/: 00000-40a795f8-daa3-49cc-8ac5-e78d0d84da78.metadata.json  00001-c1bcefaa-aedc-4b75-98ed-9ef5a7c23c5f.metadata.json  00002-f7e307bd-4ca6-4652-b520-1d0ff54c03d2.metadata (1).json  0ae708c3-a664-4c58-abd5-36553c4190e2-m0.avro  all_broker_holdings.csv  avro_reader.py  broker_holding.py  broker_holding_2026-07-21.csv  config.py  csv_to_db.py  data_overview.txt  injest_broker_holding.py  injestion.py  main.py  pyproject.toml  today_data.csv
injestion/data/: broker_holding_2026-07-22.csv  broker_holding_2026-07-23.csv  data-1783014293942.csv
(+11 files in other folders)
