[project]
name = "capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.12",
    "dbt-postgres>=1.10.2",
    "psycopg2>=2.9.12",
    "requests>=2.34.2",
]

[tool.uv.workspace]
members = [
    "injestion",
]
